fixed name spacing issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -255,7 +255,7 @@ html, body {
     padding-right:2rem;
     margin-top: 50vh;
     width: 75vw;
-    transform: skewX(3deg) translateX(99%);
+    transform: skewX(3deg) translateX(97%);
     border-radius: 3px;
 }
 
